Fix overflow problems and add resume link

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,7 +11,15 @@
     color: #000;
     font-size: 20px;
     height: 100vh;
-    /*width: 100vw;*/
+    overflow: hidden;
+}
+
+p a {
+    color: #fff;
+}
+
+p a:hover {
+    text-decoration: none;
 }
 
 h2 {
@@ -57,4 +65,5 @@ h2 {
     width: auto;
     position: relative;
     z-index: 10;
+    overflow: hidden;
 }
