--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -7,6 +7,7 @@ footer {
     text-align: center;
     z-index: 20;
     position: relative;
+    overflow: hidden;
 }
 
 footer ul {
