--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -29,7 +29,7 @@ nav {
 
 #main-nav li a {
   font-weight: 600;
-  padding-bottom: 2rem;
+  padding-bottom: 1em;
   color: white;
   text-decoration: none;
   transition: background-color 0.2s, border 0.2s;
